--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <button id="reset" onclick="reset()"> Reset </button>
 
         <!-- Button to lead user to puzzle demo solver  -->
-        <button id="check" onclick="location.href ='demo.html'"> Puzzle </button>
+        <button id="puzzle" onclick="location.href ='demo.html'"> Puzzle </button>
     </div>
 
     <script src="script.js"></script>
