--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <!--Reference: https://www.youtube.com/watch?v=rNQS82vrssQ&t=2023s&ab_channel=AdventureswithKim-->
     <table id="table">
         <!-- Set up the title -->
-        <h2 class="title"> SUDOKU </h2>
+        <h2 class="title"> SUDOKU SOLVER </h2>
         <tr>
             <td><input class="cell" id="cell-00" type="number" min="1" max="9"></td>
             <td><input class="cell" id="cell-01" type="number" min="1" max="9"></td>
